@@ -256,23 +256,6 @@ class TextViewSample
         </remarks>
       </Docs>
     </Member>
-    <Member MemberName="GetVisibleRect">
-      <MemberSignature Language="C#" Value="public void GetVisibleRect (Gdk.Rectangle visible_rect);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="visible_rect" Type="Gdk.Rectangle" />
-      </Parameters>
-      <Docs>
-        <summary>Fills <paramref name="visible_rect" /> with the currently-visible region of the buffer, in buffer coordinates.</summary>
-        <param name="visible_rect">the rectangle to fill</param>
-        <remarks>
-          You can convert to window coordinates with <see cref="M:Gtk.TextView.BufferToWindowCoords(Gtk.TextWindowType,System.Int32,System.Int32,System.Int32&amp;,System.Int32&amp;)" />.
-        </remarks>
-      </Docs>
-    </Member>
     <Member MemberName="AddChildAtAnchor">
       <MemberSignature Language="C#" Value="public void AddChildAtAnchor (Gtk.Widget child, Gtk.TextChildAnchor anchor);" />
       <MemberType>Method</MemberType>
@@ -1370,6 +1353,21 @@ class TextViewSample
         <summary>Whether entered text overwrites existing contents.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
         <remarks>Defaults to false.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="VisibleRect">
+      <MemberSignature Language="C#" Value="public Gdk.Rectangle VisibleRect { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Rectangle</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Returns the currently-visible region of the buffer, in buffer coordinates.</summary>
+        <returns>a <see cref="T:Gdk.Rectangle" /></returns>
+        <remarks>
+          You can convert to window coordinates with <see cref="M:Gtk.TextView.BufferToWindowCoords(Gtk.TextWindowType,System.Int32,System.Int32,System.Int32&amp;,System.Int32&amp;)" />.
+        </remarks>
       </Docs>
     </Member>
   </Members>
