@@ -1,3 +1,7 @@
+2005-03-09  Alexandre Gomes  <alexmipego@hotmail.com>
+
+	* gtk/Gtk.metadata: Set GetVisibleRect param to be passed as out.
+
 2005-03-08  Mike Kestner  <mkestner@novell.com>
 
 	* */*.cs : scrub for StringToPtrAnsi and string usage in DllImports.
